2009-05-21 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb, skel/diary.rhtml: support AutoPagerize.

2009-05-14 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary.conf.sample: delete obsolete referer.

2009-05-08 TADA Tadashi <t@tdtds.jp>
	* release 2.3.2.

2009-05-02 TADA Tadashi <t@tdtds.jp>
	* tdiary.rb: fixed bug in Comment#shorten.

2009-05-01 TADA Tadashi <t@tdtds.jp>
	* plugin/05referer.rb: fixed Encoding::CompatibilityError in referer_load.
	thanks valda.

2009-04-28 TADA Tadashi <t@tdtds.jp>
	* plugin/05referer.rb: opened reading mode of *.tdr file to 'rb'.

2009-04-27 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary/lang/ja.rb: added encoding flag from a regexp.
	(revert r3424)

2009-04-26 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* tdiary/defaultio.rb: applied patch #112. thx kakutani.

2009-04-26 TADA Tadashi <t@tdtds.jp>
	* tdiary/lang/ja.rb: removed encoding flag from a regexp.
	* skel/plugin_error.rhtml: added stack trace.
	* plugin/05referer.rb: force encoded to ASCII-8BIT in load_referer.
	* misc/lib/compatible.rb: added dummy String#encode on ruby 1.8.
	* plugin/00default.rb: added layout support plugins : brr and brl.

2009-04-10 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* skel/update.rhtml: applied patch #78, thx kakutani.

2009-03-30 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* misc/migrate.rb: replace defout to stdout. defout is obsolete.

2009-03-21 TADA Tadashi <t@tdtds.jp>
	* plugin/ja/00default.rb: fixed typo.

2009-03-10 TADA Tadashi <t@tdtds.jp>
	* plugin/00default: moved mail encoding point after all text builded.
	* skel/mail.rtxt.*: changed encoding to UTF-8.

2009-02-28 TADA Tadashi <t@tdtds.jp>
	* tdiary/defaultio.rb: sorted by date before saving.

2009-02-26 TADA Tadashi <t@tdtds.jp>
	* tdiary.rb, misc/lib/compatible.rb: fixed warning on ruby 1.9.1.

2009-02-24 TADA Tadashi <t@tdtds.jp>
	* enable migration on ruby 1.9.1.
	* forced reloading after migration.

2009-02-12 TADA Tadashi <t@tdtds.jp>